Fix misalignment with Event List Summaries (#7865)
* Fix misalignment with Event List Summaries

* simplify styling

--- a/res/css/views/messages/_ViewSourceEvent.scss
+++ b/res/css/views/messages/_ViewSourceEvent.scss
@@ -19,6 +19,7 @@ limitations under the License.
     opacity: 0.6;
     font-size: $font-12px;
     width: 100%;
+    margin-left: 20px;
 
     pre, code {
         flex: 1;
